# imgori

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml  python.yaml  python.yml
configs/: colorjitter.yaml  hflip.yaml  mnist.yaml  orientation.yaml
imgori/: __init__.py  imgori.py  optim.py  types.py  typing.py
imgori/datasets/: __init__.py  colorjitter.py  hflip.py  imgori.py  orientation.py  phase.py  utils.py
imgori/datasets/blur/: __init__.py  cuhk.py
imgori/jobs/: __init__.py  classification.py  imgori.py
imgori/models/: __init__.py  efficientnet.py
imgori/trainers/: __init__.py  colorjitter.py  imgori.py  mnist.py
tests/: test_imgori.py  test_models.py  test_orientation.py  test_types.py  test_typing.py
