[tool.poetry]
name = "imgori"
version = "0.6.0"
description = ""
authors = ["narumi <toucans-cutouts0f@icloud.com>"]
include = ["imgori/models/imgori_mobilenet_v3_small.pth"]

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.1.1"
torchvision = ">=0.16.1"
torchmetrics = "^1.2.0"
tqdm = "^4.66.5"
loguru = "^0.7.2"
mlconfig = "^0.2.2"
boto3 = "^1.35.4"
wandb = "^0.17.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
ruff = "^0.6.1"
toml = "^0.10.2"
types-cffi = "^1.16.0.20240331"
types-colorama = "^0.4.15.20240311"
types-protobuf = "^5.27.0.20240626"
types-pygments = "^2.18.0.20240506"
types-pyyaml = "^6.0.12.20240808"
types-regex = "^2024.5.15.20240519"
types-requests = "^2.32.0.20240712"
types-setuptools = "^73.0.0.20240822"
types-six = "^1.16.21.20240513"
types-tabulate = "^0.9.0.20240106"
types-tqdm = "^4.66.0.20240417"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imgori = "imgori.cli:cli"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle Error
    "F",   # Pyflakes
    "I",   # isort
    "NPY", # NumPy-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle Warning
    # "EM", # flake8-errmsg
    # "PTH", # flake8-use-pathlib
    # "S", # flake8-bandit
    # "TRY", # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
